Gives the ScrollToTop button z-index to avoid it going under animated objects

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;800&display=swap");
 
 .app {
-  background-color: rgb(70, 79, 229);
+  background-color: rgb(67 56 202);
   /* background-image: url("../Images/moroccan-flower.png"); */
   background-blend-mode: multiply;
   scroll-padding-top: 200px;
