--- a/src/Styles/ScrollToTopButton.css
+++ b/src/Styles/ScrollToTopButton.css
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 35px;
   right: 35px;
+  z-index: 1;
 }
 
 .to-top-btn-style {
